ULEARN-450 Bug fix. Removed overflow:hidden from slide styles

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -34,7 +34,6 @@
 
 .slide {
   margin-bottom: 15px;
-  overflow: hidden;
   background-color: @white;
 }
 
